Fix file source resource type detection with partition numbers
Corrects the retrieveFilesFromPath method to properly handle files
with partition numbers (e.g., Patient.00000.ndjson) by using the
retrieveResourceTypeFromFilePath helper that strips partition IDs
before applying the file name mapper.

Also adds debug logging to trace file-to-resource-type mapping for
troubleshooting purposes.